--- a/AgendamentoOn/src/main/resources/application.properties
+++ b/AgendamentoOn/src/main/resources/application.properties
@@ -8,10 +8,12 @@ spring.datasource.password=2004Vit@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/static/
+
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.datasource.hikari.maximum-pool-size=10
-
