--- a/AgendamentoOn/src/main/resources/application.properties
+++ b/AgendamentoOn/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=2004Vit@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mvc.static-path-pattern=/**
 spring.web.resources.static-locations=classpath:/static/
